--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- FavIcon -->
+        <link rel="icon" type="image/png" href="assets/img/dices_white.png">
+
         <!-- Web App -->
         <link rel="manifest" href="worker/manifest.json">
         <!-- iOS Web App -->
@@ -14,7 +17,7 @@
         <meta name="apple-mobile-web-app-title" content="Dungeon 'n Dices">
         <link rel="apple-touch-icon" href="assets/img/dices_white.png">
         <!-- Windows 10 Web App -->
-        <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+        <meta name="msapplication-TileImage" content="assets/img/dices_white.png">
         <meta name="msapplication-TileColor" content="#2F3BA2">
 
         <link rel="stylesheet" href="assets/css/main.css">
