Update WebApp Chrome

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
         <!-- Web App -->
         <link rel="manifest" href="worker/manifest.json">
+        <!-- Chrome -->
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="Dungeon 'n Dices">
+        <link rel="icon" sizes="64x64" href="assets/img/dices_white.png">
         <!-- iOS Web App -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
