Progressive Web App
Service Worker

--- a/assets/css/elements.html
+++ b/assets/css/elements.html
@@ -1,3 +1,6 @@
+<!-- Platinum Elements -->
+<link rel="import" href="../bower_components/platinum-sw/platinum-sw-elements.html">
+
 <!-- App elements -->
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
