--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     </head>
 
     <body unresolved>
+        <platinum-sw-register auto-register
+                              skip-waiting
+                              clients-claim
+                              reload-on-install
+                              href="worker/sw-import.js">
+            <platinum-sw-cache default-cache-strategy="networkFirst"></platinum-sw-cache>
+        </platinum-sw-register>
+
         <dungeon-dices></dungeon-dices>
     </body>
 </html>
