--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
 
         <dungeon-dices></dungeon-dices>
 
+        <script type="text/javascript" src="assets/libs/linq.min.js"></script>
+
     </body>
 </html>
