--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         <meta name="msapplication-TileImage" content="assets/img/icon-144.png">
         <meta name="msapplication-TileColor" content="#2F3BA2">
 
+
+        <link rel="stylesheet" href="assets/css/main.css">
+
+        <link rel="import" href="assets/bower_components/polymer/polymer.html">
+
+        <link rel="import" href="app/dungeon-dices.html">
+        <!--link rel="import" href="assets/css/elements.html"-->
+
+        <title>Dungeon 'n Dices</title>
+        <meta name="description" content="The RPG Generic Sheet Organizer">
+    </head>
+
+    <body unresolved>
+
+        <dungeon-dices></dungeon-dices>
+
         <script>
             // HTTPS for Servic Worker
             var host = "dungeon-n-dices.github.io";
@@ -46,20 +62,6 @@
                 console.log("WebComponents Loaded");
             }
         </script>
-
-        <link rel="stylesheet" href="assets/css/main.css">
-
-        <link rel="import" href="assets/bower_components/polymer/polymer.html">
-
-        <link rel="import" href="assets/css/elements.html">
-
-        <title>Dungeon 'n Dices</title>
-        <meta name="description" content="The RPG Generic Sheet Organizer">
-    </head>
-
-    <body unresolved>
-
-        <dungeon-dices></dungeon-dices>
 
         <script type="text/javascript" src="assets/libs/linq.min.js"></script>
 
