Trying trying trying

--- a/app/dungeon-dices.html
+++ b/app/dungeon-dices.html
@@ -105,13 +105,13 @@
 
         <platinum-https-redirect></platinum-https-redirect>
 
-        <!--platinum-sw-register auto-register
+        <platinum-sw-register auto-register
                               skip-waiting
                               clients-claim
                               reload-on-install
                               href="../sw-import.js">
             <platinum-sw-cache default-cache-strategy="fastest"></platinum-sw-cache>
-        </platinum-sw-register-->
+        </platinum-sw-register>
 
         <app-location use-hash-as-path
                       route="{{ route }}"></app-location>
