--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -1,72 +1,68 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
+<html>
+    <head>
+        <meta charset="utf-8">
 
-  <title>My App</title>
+        <!-- Mobile -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
 
-  <link rel="shortcut icon" sizes="32x32" href="/images/app-icon-32.png">
+        <title>Dungeon 'n Dices</title>
 
-  <meta name="theme-color" content="#fff">
-  <link rel="manifest" href="/manifest.json">
+        <link rel="shortcut icon" sizes="32x32" href="/images/app-icon-32.png">
 
-  <script>
+        <meta name="theme-color" content="#fff">
+        <link rel="manifest" href="/manifest.json">
 
-    // setup Polymer options
-    window.Polymer = {lazyRegister: true, dom: 'shadow'};
+        <script>
+        // setup Polymer options
+        window.Polymer = {lazyRegister: true, dom: 'shadow'};
 
-    // load webcomponents polyfills
-    (function() {
-      if ('registerElement' in document
-          && 'import' in document.createElement('link')
-          && 'content' in document.createElement('template')) {
-        // browser has web components
-      } else {
-        // polyfill web components
-        var e = document.createElement('script');
-        e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
-        document.head.appendChild(e);
-      }
-    })();
+        // load webcomponents polyfills
+        (function() {
+            if ('registerElement' in document
+                && 'import' in document.createElement('link')
+                && 'content' in document.createElement('template')) {
+                // browser has web components
+            } else {
+                // polyfill web components
+                var e = document.createElement('script');
+                e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
+                document.head.appendChild(e);
+            }
+        })();
 
-    // load pre-caching service worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/service-worker.js');
-      });
-    }
+        // load pre-caching service worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+        </script>
 
-  </script>
+        <link rel="import" href="/src/dnd-app.html">
 
-  <link rel="import" href="/src/dnd-app.html">
+        <script type="text/javascript" src="/linq.min.js"></script>
 
-  <style>
+        <style>
 
-    body {
-      margin: 0;
-      font-family: 'Roboto', 'Noto', sans-serif;
-      line-height: 1.5;
-      min-height: 100vh;
-      background-color: #eee;
-    }
+        body {
+            -webkit-touch-callout: none;    /* prevent callout to copy image, etc when tap to hold */
+            -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
+            -webkit-user-select: none;      /* prevent copy paste, to allow, change 'none' to 'text' */
+            margin: 0;
+            font-family: 'Roboto', 'Noto', sans-serif;
+            line-height: 1.5;
+            min-height: 100vh;
+            background-color: #eee;
+        }
 
-  </style>
+        </style>
 
-</head>
-<body>
+    </head>
 
-  <dnd-app></dnd-app>
+    <body>
 
-</body>
+        <dnd-app></dnd-app>
+
+    </body>
 </html>
