--- a/dnd-upgrade/src/dnd-sheet-create.html
+++ b/dnd-upgrade/src/dnd-sheet-create.html
@@ -1,67 +1,176 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+
+<link rel="import" href="dnd-basesheet-data.html">
+<link rel="import" href="dnd-newsheet-data.html">
+
+<link rel="import" href="create-basic-tab.html">
+<link rel="import" href="create-status-tab.html">
+<link rel="import" href="create-resources-tab.html">
+<link rel="import" href="create-defenses-tab.html">
+<link rel="import" href="create-skills-tab.html">
 
 <dom-module id="dnd-sheet-create">
 
-  <template>
+    <template>
 
-    <style>
-      :host {
-        display: block;
-        padding: 10px;
-      }
-      .card {
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-        padding: 16px;
-        margin: 24px;
-        border-radius: 5px;
-        background-color: #fff;
-        color: #757575;
-      }
-      .circle {
-        display: inline-block;
-        height: 64px;
-        width: 64px;
-        border-radius: 50%;
-        background: #ddd;
-        line-height: 64px;
-        font-size: 30px;
-        color: #555;
-        text-align: center;
-      }
-      h1 {
-        font-size: 22px;
-        margin: 16px 0;
-        color: #212121;
-      }
-    </style>
+        <style>
+            :host {
+                display: block;
+            }
 
-    <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
-    </div>
+            paper-tabs {
+                background-color: var(--primary-color);
+                color: #FFF;
+            }
 
-  </template>
+            paper-fab {
+                position: absolute;
+                top: 32px;
+                right: 16px;
+            }
+        </style>
 
-  <script>
+        <dnd-basesheet-data base-sheet="{{ baseSheet }}"></dnd-basesheet-data>
+        <dnd-newsheet-data new-sheet="{{ newSheet }}"
+                           base-sheet="{{ baseSheet }}"></dnd-newsheet-data>
 
-    Polymer({
+        <paper-tabs noink
+                    scrollable
+                    selected="{{ tabSelected }}">
+            <paper-tab>Basic</paper-tab>
+            <paper-tab>Status</paper-tab>
+            <paper-tab>Resources</paper-tab>
+            <paper-tab>Defenses</paper-tab>
+            <paper-tab>Skills</paper-tab>
+        </paper-tabs>
 
-      is: 'dnd-sheet-create'
+        <iron-pages selected="{{ tabSelected }}">
 
-    });
+            <create-basic-tab name="{{ newSheet.name }}"
+                              job="{{ newSheet.job }}"
+                              race="{{ newSheet.race }}"
+                              level="{{ newSheet.level }}"
+                              system="{{ newSheet.system }}"></create-basic-tab>
 
-  </script>
+            <create-status-tab status-list="{{ newSheet.statusList }}"></create-status-tab>
+
+            <create-resources-tab resources-list="{{ newSheet.resourcesList }}"
+                                  status-list="{{ newSheet.statusList }}"></create-resources-tab>
+
+            <create-defenses-tab defenses-list="{{ newSheet.defensesList }}"
+                                 status-list="{{ newSheet.statusList }}"></create-defenses-tab>
+
+            <create-skills-tab skills-list="{{ newSheet.skillsList }}"
+                               status-list="{{ newSheet.statusList }}"></create-skills-tab>
+
+        </iron-pages>
+
+        <paper-fab icon="save"
+                   on-click="_openSaveSheetDialog"></paper-fab>
+
+        <paper-dialog id="openSaveSheetDialog">
+            <h2>Save New Sheet</h2>
+            <p>Do you want to save this new sheet? </p>
+            <p>Keep in mind that you can't add or remove anything later.</p>
+            <div class="buttons">
+                <paper-button dialog-dismiss>Decline</paper-button>
+                <paper-button dialog-confirm
+                              autofocus
+                              on-click="_saveSheet">Accept</paper-button>
+            </div>
+        </paper-dialog>
+
+    </template>
+
+    <script>
+
+        Polymer({
+
+            is: 'dnd-sheet-create',
+
+            properties: {
+                tabSelected: {
+                    type: String,
+                    value: "0",
+                    notify: true
+                }
+            },
+
+            _openSaveSheetDialog: function(e){
+                document.querySelector("paper-dialog").open();
+            },
+
+            _saveSheet: function(e){
+                console.log("Saving Sheet");
+                // Need to Verify  Each Status, Resource, Defense and Skill and SUM
+                var element = this;
+                // SUM Status = baseValue + (levelModifier * level)
+                this.newSheet.statusList.forEach(
+                    function(status, index){
+                        status.value = parseInt(status.baseValue) + (parseFloat(status.levelModifier) * parseInt(element.newSheet.level));
+                    }
+                );
+                // SUM Resource = baseValue + (statusBase.value * statusBaseModifier) + (levelModifier * level)
+                // or if statusBase == None => SUM Resource = baseValue + (levelModifier * level)
+                this.newSheet.resourcesList.forEach(
+                    function(resource, index){
+                        if(resource.statusBase != "None"){
+                            var baseStatusValue = Enumerable.From(element.newSheet.statusList)
+                                                            .Where(function (x) { return x.name == resource.statusBase })
+                                                            .Select(function (x) { return x.value })
+                                                            .ToString();
+                            resource.value = parseInt(parseInt(resource.baseValue) + (parseFloat(resource.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(resource.levelModifier) * parseInt(element.newSheet.level)));
+                        } else{
+                            resource.value = parseInt(parseInt(resource.baseValue) + (parseFloat(resource.levelModifier) * parseInt(element.newSheet.level)));
+                        }
+                    }
+                );
+                // SUM Defense = baseValue + (statusBase.value * statusBaseModifier) + (levelModifier * level)
+                // or if statusBase == None => SUM Defense = baseValue + (levelModifier * level)
+                this.newSheet.defensesList.forEach(
+                    function(defense, index){
+                        if(defense.statusBase != "None"){
+                            var baseStatusValue = Enumerable.From(element.newSheet.statusList)
+                                                            .Where(function (x) { return x.name == defense.statusBase })
+                                                            .Select(function (x) { return x.value })
+                                                            .ToString();
+                            defense.value = parseInt(parseInt(defense.baseValue) + (parseFloat(defense.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(defense.levelModifier) * parseInt(element.newSheet.level)));
+                        } else{
+                            defense.value = parseInt(parseInt(defense.baseValue) + (parseFloat(defense.levelModifier) * parseInt(element.newSheet.level)));
+                        }
+                    }
+                );
+                // SUM Skill = baseValue + (statusBase.value * statusBaseModifier) + (levelModifier * level)
+                // or if statusBase == None => SUM Skill = baseValue + (levelModifier * level)
+                this.newSheet.skillsList.forEach(
+                    function(skill, index){
+                        if(skill.statusBase != "None"){
+                            var baseStatusValue = Enumerable.From(element.newSheet.statusList)
+                                                            .Where(function (x) { return x.name == skill.statusBase })
+                                                            .Select(function (x) { return x.value })
+                                                            .ToString();
+                            skill.value = parseInt(parseInt(skill.baseValue) + (parseFloat(skill.statusBaseModifier) * parseInt(baseStatusValue)) + (parseFloat(skill.levelModifier) * parseInt(element.newSheet.level)));
+                        } else{
+                            skill.value = parseInt(parseInt(skill.baseValue) + (parseFloat(skill.levelModifier) * parseInt(element.newSheet.level)));
+                        }
+                    }
+                );
+                // Pushing to SheetList and Cleaning the newSheet
+                document.querySelector("sheetlist-data").push("sheetList.list", this.newSheet);
+                document.querySelector("newsheet-data").set("newSheet", this.baseSheet);
+                console.log("Sheet Saved");
+                console.log("Route to SheetList");
+                document.querySelector("dungeon-dices").set("route.path", "/sheetList");
+            }
+
+        });
+
+    </script>
 
 </dom-module>
