--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -14,34 +14,31 @@
         <link rel="manifest" href="/manifest.json">
 
         <script>
-        // setup Polymer options
-        window.Polymer = {lazyRegister: true, dom: 'shadow'};
+            // setup Polymer options
+            window.Polymer = {lazyRegister: true, dom: 'shadow'};
 
-        // load webcomponents polyfills
-        (function() {
-            if ('registerElement' in document
-                && 'import' in document.createElement('link')
-                && 'content' in document.createElement('template')) {
-                // browser has web components
-            } else {
-                // polyfill web components
-                var e = document.createElement('script');
-                e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
-                document.head.appendChild(e);
+            // load webcomponents polyfills
+            (function() {
+                if ('registerElement' in document
+                    && 'import' in document.createElement('link')
+                    && 'content' in document.createElement('template')) {
+                    // browser has web components
+                } else {
+                    // polyfill web components
+                    var e = document.createElement('script');
+                    e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
+                    document.head.appendChild(e);
+                }
+            })();
+            // load pre-caching service worker
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', function() {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
             }
-        })();
-
-        // load pre-caching service worker
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('/service-worker.js');
-            });
-        }
         </script>
 
         <link rel="import" href="/src/dnd-app.html">
-
-        <script type="text/javascript" src="/linq.min.js"></script>
 
         <style>
 
@@ -62,7 +59,8 @@
 
     <body>
 
-        <dnd-app></dnd-app>
+        <dnd-app unresolved></dnd-app>
 
+        <script type="text/javascript" src="/linq.min.js"></script>
     </body>
 </html>
