--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -15,6 +15,33 @@
             :host {
                 display: block;
                 @apply(--layout-vertical);
+                padding: 16px;
+            }
+
+            input[is="iron-input"] {
+                font: inherit;
+            }
+
+            paper-card {
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+            }
+
+            paper-fab {
+                position: absolute;
+                bottom: 16px;
+                right: 16px;
+            }
+
+            .card-content {
+                padding: 16px;
+                padding-bottom: 24px;
+                position: relative;
+            }
+
+            .card-actions {
+                border-top: 1px solid #e8e8e8;
+                padding: 5px 16px;
+                position: relative;
             }
 
             .card-actions-button {
