--- a/dnd-upgrade/src/create-status-tab.html
+++ b/dnd-upgrade/src/create-status-tab.html
@@ -16,6 +16,14 @@
                 padding: 16px;
             }
 
+            input[is="iron-input"] {
+                font: inherit;
+            }
+
+            paper-card {
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+            }
+
             paper-fab {
                 position: absolute;
                 bottom: 16px;
@@ -23,7 +31,15 @@
             }
 
             .card-content {
-                padding: 0 8px;
+                padding: 16px;
+                padding-bottom: 24px;
+                position: relative;
+            }
+
+            .card-actions {
+                border-top: 1px solid #e8e8e8;
+                padding: 5px 16px;
+                position: relative;
             }
 
             .card-actions-button {
