--- a/dnd-upgrade/src/dnd-sheet-create.html
+++ b/dnd-upgrade/src/dnd-sheet-create.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
@@ -42,6 +43,7 @@
 
         <paper-tabs noink
                     scrollable
+                    fixed
                     selected="{{ tabSelected }}">
             <paper-tab>Basic</paper-tab>
             <paper-tab>Status</paper-tab>
