Sheet Create Scroll Correction

--- a/dnd-upgrade/src/dnd-sheet-create.html
+++ b/dnd-upgrade/src/dnd-sheet-create.html
@@ -35,6 +35,12 @@
                 top: 32px;
                 right: 16px;
             }
+
+            iron-pages{
+                height: calc(100vh - 50px - 64px);
+                margin-top: 2px;
+                overflow: auto;
+            }
         </style>
 
         <dnd-basesheet-data base-sheet="{{ baseSheet }}"></dnd-basesheet-data>
