Furious and Fast Fast Fast, but with Safe-Belt
Testing the first painting and first interation with the sure that all
the content have being loaded

Maybe not the best approache beacause of the localstorage, but let's
give it a chance

--- a/dnd-upgrade/src/dnd-app.html
+++ b/dnd-upgrade/src/dnd-app.html
@@ -139,13 +139,22 @@
                 '_routePageChanged(routeData.page)'
             ],
 
+            ready: function(e) {
+                this.importHref(
+                    this.resolveUrl('dnd-sheet-list.html'), null, null, true);
+                this.importHref(
+                    this.resolveUrl('dnd-sheet-create.html'), null, null, true);
+                this.importHref(
+                    this.resolveUrl('dnd-sheet-detail.html'), null, null, true);
+            },
+
             _routePageChanged: function(page) {
                 this.page = page || 'list';
             },
 
             _pageChanged: function(page) {
-                this.importHref(
-                    this.resolveUrl('dnd-sheet-' + page + '.html'), null, null, true);
+                //this.importHref(
+                //    this.resolveUrl('dnd-sheet-' + page + '.html'), null, null, true);
             }
 
         });
