Hotfix loading Status List

--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -15,6 +15,7 @@
 
         <script>
             // setup Polymer options
+            //window.Polymer = {lazyRegister: true, dom: 'shadow'};
             window.Polymer = {lazyRegister: true, dom: 'shadow'};
 
             // load webcomponents polyfills
