--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -18,12 +18,8 @@
                 padding: 16px;
             }
 
-            input[is="iron-input"] {
-                font: inherit;
-            }
-
             paper-card {
-                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+                margin-bottom: 16px;
             }
 
             paper-fab {
@@ -73,9 +69,8 @@
                                        selected="{{ item.statusBase }}">
                             <paper-item status-name="None">None</paper-item>
                             <template is="dom-repeat"
-                                      items="{{ item.statusList }}"
-                                      as="stat">
-                                <paper-item status-name="{{ stat.name }}">{{ stat.name }}</paper-item>
+                                      items="{{ statusList }}">
+                                <paper-item status-name="{{ item.name }}">{{ item.name }}</paper-item>
                             </template>
                         </paper-listbox>
                     </paper-dropdown-menu>
@@ -112,19 +107,6 @@
     Polymer({
 
         is: "create-defenses-tab",
-
-        properties: {
-            defensesList: {
-                type: Array,
-                notify: true,
-                reflectToAttribute: true
-            },
-            statusList: {
-                type: Array,
-                notify: true,
-                reflectToAttribute: true
-            }
-        },
 
         _newDefenses: function(e){
             console.log("Defenses Card Add");
